--- a/src/styles/daniellehmann/components/hero/hero.scss
+++ b/src/styles/daniellehmann/components/hero/hero.scss
@@ -19,6 +19,10 @@
     padding: 0 2rem;
     margin: 0 auto;
     padding-bottom: 4rem;
+
+    @include mq('tablet','max') {
+      padding-top: 12rem;
+    }
   }
 
   &-content {
@@ -108,9 +112,12 @@
   top: 0;
   opacity: 0.2;
   width: 60%;
-  // height: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 0;
+
+  @include mq('tablet', 'min') {
+    height: 100vh;
+  }
 
   &__inner {
     width: 100%;
@@ -144,7 +151,11 @@
 .hero-content__intro {
   > div {
     line-height: 210%;
-    width: 80%;
+    width: 90%;
+
+    @include mq('tablet', 'min') {
+      width: 80%;
+    }
   }
 
   .full {
